# sails_action_classification

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: docs.yaml  release.yaml  test.yaml
configs/: config_bids_convertor.yaml
docs/: BIDS_convertor.md
feature_processing/: README.md  batch_child_identification.py  batch_pipeline.py  modular_pipeline.py  tracking_exporter.py
feature_processing/child_id/: batch_child_identification.py  child_identification_design.md  single_child_identification.py
feature_processing/entitysam/: entitysam_bbox_overlay.py  entitysam_inference.py
feature_processing/tracking/: batch_pipeline.py  config_examples.py  modular_pipeline.py  tracking_exporter.py
jobs/: analysis_job.sh  merge_cleanup.sh  run_bids_convertor.sh  test_pyskl_sw.sh  train_pyskl_sw.sh
jobs/action_model_testing/: Video_Swin_full_video_multi_job2.sh  Video_Swin_full_video_multi_job_twostage.sh  Video_Swin_job_clip.sh  Videomaev2_job.sh  Videomaev2_submit_all.sh  frame_level_qwen2_5.sh  full_video_window_job_video_swin.sh  i3d_r2p1d_feature_extracion.sh  internvideo2_finetune.sh  motionbert.sh  mstcn2.sh  pyskl_job.sh  slow_fast.sh  submit_ovis_clip.sh  submit_qwen_clip.sh  submit_tad_array.sh  vjepa_feature_extracion.sh.sh  vlm_models_submit_window.sh
jobs/action_model_testing/InternVideo_v2/: internvideo2_finetune.sh
jobs/action_model_testing/OpenTAD/: submit_tad_array.sh
jobs/action_model_testing/Videomaev2/: Videomaev2_job.sh  Videomaev2_submit_all.sh
jobs/action_model_testing/feature_extraction/: i3d_r2p1d_feature_extracion.sh  vjepa_feature_extracion.sh
jobs/action_model_testing/internvideo2/: internvideo2_finetune.sh
jobs/action_model_testing/motionbert/: motionbert.sh
jobs/action_model_testing/mstcn2/: mstcn2.sh
jobs/action_model_testing/open_tad/: submit_tad_array.sh
jobs/action_model_testing/pyskl/: fusion_job.sh  pyskl_job.sh  test_job.sh
jobs/action_model_testing/slow_fast/: slow_fast.sh
jobs/action_model_testing/videomae2/: videomae2_job.sh  videomae2_submit_all.sh
jobs/analysis/: analysis_job.sh
jobs/fusion_model/pyskl/: test_pyskl_sw.sh  train_pyskl_sw.sh
jobs/tracking_pose_model_testing/: bytetrack.sh  deepsort.sh  deepsort_reid.sh  entitysam.sh  face_mediapipe.sh  hrnet.sh  mediapipe_holistic.sh  openpose_batch.sh  vit_pose.sh  yolo_pose.sh
motion_tracking/: README.md  config.py  modular_pipeline_gp.py  motion_pipeline.py  motion_resnet.py  requirements.txt
notebooks/: Tracking_Pipeline.md  age_det.ipynb  annotation_analysis.ipynb  child_identification_experiment.ipynb  model_testing.ipynb
notebooks/scripts/: motion_appearance_reid.py
reid_models/: resnet_50.py  trackerv10.py  trackerv11.py
reid_models/clip_reid/: clip_reid.py  requirements.txt
src/: BIDS_convertor.py
src/action_model_testing/OpenTAD/: end_to_end_custom.py  eval_frame_metrics.py  evaluate_all.py  submit_tad_array.sh
src/action_model_testing/dlc_action/: run.py
src/action_model_testing/id_tracking_model/: visualize_tracking_from_child_id.py
src/action_model_testing/mstcn_code/: mstcn2_framelevel.py  run_mstcn2.sh
src/action_model_testing/slow_fast/: clips_combined.py  job.sh
src/feature_extraction/id3_r_feature/: full_job.sh  id3.sh
src/feature_extraction/vjepa_feature_extraction/: clip_job.sh  h5_full_vjepa2.py
src/id_tracking_model/pose/: batch_pose.py
src/id_tracking_model/utils/: tracking_exporter.py  utils.py
src/new_code/: README.md  bids.py  data_copy_to_bids.ipynb  log_file.ipynb  submit_bids.sh
src/sailsprep/: BIDS_convertor.py
src/sailsprep/action_model_testing/: README.md
src/sailsprep/analysis/: README.md
src/sailsprep/annotation/: README.md  annotation.py  index.html
src/sailsprep/fusion_model/: README.md
src/sailsprep/id_tracking_model/: README.md  visualize_tracking_from_child_id.py
src/sailsprep/sam3_video/: reconstruct_results_json_filtered.py  run_sam3_video.py  run_sam3_video_v2_negative.py  sam3_masks_only.py
src/sailsprep/tracking/: __init__.py  person_tracker.py
src/sailsprep/tracking_pose_model_testing/: README.md  bytetrack.py  deepsort.py  deepsort_reid.py  deva.py  efficientpose.py  entitysam.py  face_mediapipe.py  hrnet.py  mediapipe_holistic.py  mediapipe_holistic_processor.py  movenet.py  openpifpaf.py  openpose_video.py  poseformer.py  rtmlib.py  rtmpose.py  sam2_yolov8.py  vit_h5.py  vit_pose.py  yolo_pose.py
src/sailsprep/vjepa_code_frame_window/: evaluate_all_models.py  rerun_window_inference.py  two_stage.py
src/sailsprep/vlm_models_constraint_activity/: README.md  compare_results.py  context.py  (+5 more)
src/sam3_video/: job_ou_bcs.sh  job_pi_satra.sh  run_sam3_video_old_overlap.py  sam3_targeted_noyolo.py
src/tests/: conftest.py  test_BIDS_convertor.py  test_batch_identify_target.py  test_batch_pose.py  test_batch_tracker.py  test_bytetrack.py  test_cache_manager.py  test_cache_pose.py  test_deepsort.py  test_deepsort_reid.py  test_dlc_action_run.py  test_face_mediapipe.py  test_feature_extraction.py  test_hrnet.py  test_internvideo.py  test_mstcn2.py  test_opentad.py  test_person_tracker.py  test_pyskl.py  test_single_child_track_selector.py  test_slow_fast.py  test_tracker_clip.py  test_tracking_exporter.py  test_videomae2.py  test_vit_pose.py  test_vlm_models.py  test_yolo_pose.py
src/tracking_pose_model_testing/: yolo26_process.py
src/vjepa_code_frame_window/: run_probe.sh  train_probe_framelevel.py  train_probe_framelevel_hierarchical.py  window.py
test_video_gps/: gps.ipynb
test_video_gps/sam3_video/: chunks.py  generate_masked_videos.py  job2.py  job2.sh  last_job.py  reconstruct_detections_csv.py  reconstruct_results_json.py
tracking_clip_reid/: new_motion_tracker.py
vlm_testing/: README.md  base_vlm.py  config.py  context.py  evaluator.py  inference.py  llava_next_vlm.py  models.py  prompts.py  qwen2_vl_vlm.py  smolvlm_vlm.py  timezero_vlm.py  videollama2_vlm.py
vlm_testing/Constraint/: README.md  evaluate_vjepa_windowing.py
vlm_testing/tracking_pose_model_testing/: face_mediapipe.py  hrnet_h5.py
(+409 files in other folders)
