[project]
name = "sailsprep"
dynamic = ["version", "dependencies"]
description = "sailsprep is a Python package for doing incredible video-based human pose estimation analyses."
authors = [
  {name = "yibeichan", email = "yibei@mit.edu"},
  {name = "fabiocat", email = "fabiocat@mit.edu"},
  {name = "satra",    email = "satra@mit.edu"}
]
maintainers = [
  {name = "yibeichan", email = "yibei@mit.edu"},
  {name = "fabiocat", email = "fabiocat@mit.edu"},
  {name = "satra",    email = "satra@mit.edu"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11,<3.13"
homepage      = "https://github.com/sensein/sails_action_classification"
repository    = "https://github.com/sensein/sails_action_classification"
documentation = "https://github.com/sensein/sails_action_classification"
keywords = ["human pose estimation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]

[project.scripts]
sailsprep-cli = "sailsprep.cli:main"


# ── Poetry metadata ───────────────────────────────────────────────────────────
[tool.poetry]
packages       = [{include = "sailsprep", from = "src"}]
requires-poetry = ">=2.0"
version        = "0.0.0"


# ── Main dependencies ─────────────────────────────────────────────────────────
[tool.poetry.dependencies]
# Widen to >=3.11 so numpy 2.x (which requires >=3.11) can resolve.
# Python 3.10 is still listed in [project] classifiers for reference, but
# the ML stack (numpy ^2.x, torch 2.5+) only ships wheels for 3.11+.
python        = ">=3.11,<3.13"
click         = "~=8.2"
pandas        = "^2.3.3"
opencv-python = "^4.12.0.88"
openpyxl      = "^3.1.5"
types-pyyaml  = "^6.0.12.20250915"
natsort       = "^8.4"

[tool.poetry.group.entity-sam]
optional = true

[tool.poetry.group.entity-sam.dependencies]
torch        = ">=2.5,<3.0"
torchvision  = ">=0.20,<1.0"
numpy        = ">=2.2,<3.0"
opencv-python-headless = "^4.8"
pandas       = "^2.3"
pillow       = ">=10.0"
natsort      = "^8.4"
psutil       = "^6.0"
panopticapi  = {git = "https://github.com/cocodataset/panopticapi.git"}
sam-2 = {git = "https://github.com/facebookresearch/sam2.git"}

[tool.poetry.group.vitpose]
optional = true

[tool.poetry.group.vitpose.dependencies]
torch                  = ">=2.0,<3.0"
transformers           = ">=4.45,<5.0"   # VitPoseForPoseEstimation added in 4.45
pillow                 = ">=10.0"
opencv-python-headless = "^4.8"
h5py                   = "^3.9"
numpy                  = ">=1.26,<3.0"
pandas                 = "^2.3"
tqdm                   = "^4.64"

# ── dlc2action + all its heavy runtime deps ───────────────────────────────────
[tool.poetry.group.dlc2action]
optional = true

[tool.poetry.group.dlc2action.dependencies]
dlc2action   = {git = "https://github.com/amathislab/DLC2action.git", rev = "1d7d690a219ccd3403c2d3c04cfa3c9457f8260c"}

torch        = ">=2.5,<3.0"    
torchaudio   = ">=2.5,<3.0"
torchvision  = ">=0.20,<1.0"
numpy        = ">=2.4,<3.0"   # 2.4.x requires Python >=3.11 (matched above)
scipy        = "^1.10"
scikit-learn = "^1.3"
einops       = "^0.8"
h5py         = "^3.9"
optuna       = "^4.0"
tqdm         = "^4.64"
pandas       = "^2.3.3"        # also in main, but dlc2action may need >=2
seaborn      = "^0.13"
plotly       = "^6.0"
opencv-python-headless = "^4.8"
editdistance = "^0.8"
colorlog     = "^6.0"
ruamel-yaml  = "^0.19"
p-tqdm       = "^1.4"
multiprocess = "^0.70"
matplotlib = ">=3.6,<3.9" 
pytorch-lightning = ">=2.0,<3.0"
pytorchvideo      = ">=0.1.5"

[tool.poetry.group.Video_Swin]
optional = true

[tool.poetry.group.Video_Swin.dependencies]
torch              = ">=2.0,<3.0"
pytorch-lightning  = ">=2.0,<3.0"
opencv-python-headless = "^4.8"
h5py               = "^3.9"
scikit-learn       = "^1.3"
einops             = "^0.8"
timm               = "^1.0"
pandas             = "^2.3"
numpy              = ">=1.26,<3.0"
# ── Feature extraction (I3D + VJEPA2) ────────────────────────────────────────
[tool.poetry.group.feature-extraction]
optional = true

[tool.poetry.group.feature-extraction.dependencies]
# Core torch stack (matches the i3d conda env: torch 2.6 / torchvision 0.21)
torch        = ">=2.6,<3.0"
torchvision  = ">=0.21,<1.0"
numpy        = ">=2.2,<3.0"

# Video I/O
opencv-python-headless = "^4.8"   # headless — no GUI deps on cluster
h5py         = "^3.9"

# VJEPA2 / HuggingFace
transformers = "^4.50"
huggingface-hub = "^0.36"
eva-decord   = "^0.6"             # fork with CUDA support used in your script
accelerate   = "^1.0"
safetensors  = "^0.4"

# Shared utilities already in dlc2action but repeated for standalone installs
pandas       = "^2.3"
tqdm         = "^4.64"
scikit-learn = "^1.3"

[tool.poetry.group.pose-estimation]
optional = true

[tool.poetry.group.pose-estimation.dependencies]
torch          = ">=2.0,<3.0"
torchvision    = ">=0.15,<1.0"
mmcv           = "==2.0.1"          # pin to match mmpose/mmdet compatibility
mmengine       = ">=0.8,<1.0"
mmdet          = ">=3.0,<4.0"
mmpose         = ">=1.0,<2.0"
opencv-python-headless = "^4.8"
h5py           = "^3.9"
numpy          = ">=1.26,<3.0"
pandas         = "^2.3"
tqdm           = "^4.64"


[tool.poetry.group.opentad]
optional = true
 
[tool.poetry.group.opentad.dependencies]
torch          = ">=2.0,<3.0"
torchvision    = ">=0.15,<1.0"
numpy          = ">=1.24,<3.0"       # conda env uses 1.26.4
mmaction2      = "==1.1.0"
setuptools = ">=60,<70"  # pin to keep pkg_resources available
mmcv = "==2.0.1"
mmengine       = "==0.8.4"
einops         = "^0.8"
h5py           = "^3.9"
scipy          = "^1.10"
scikit-learn   = "^1.3"
tqdm           = "^4.64"           
decord = {version = "^0.6", source = "pypi", markers = "sys_platform != 'darwin'"}  # video decode used by mmaction2 pipelines
#pyskl = {git = "https://github.com/kennymckormick/pyskl.git"}
# ── Vision‑Language Models (Ovis2 + Qwen2.5‑VL) ─────────────────────────────
[tool.poetry.group.vlm]
optional = true

[tool.poetry.group.vlm.dependencies]
# Core VLM stack
torch                = ">=2.5,<3.0"
torchvision          = ">=0.20,<1.0"
transformers         = ">=4.45,<5.0"
accelerate           = ">=1.0,<2.0"
safetensors          = ">=0.4"
huggingface-hub      = ">=0.20"
timm                 = ">=1.0"
einops               = ">=0.8"

# Qwen2.5‑VL specific
qwen-vl-utils        = ">=0.0.14"

# Ovis2 may rely on these
tokenizers           = ">=0.19"
msgpack              = ">=1.0"

# Video processing (already in other groups, but kept for completeness)
opencv-python-headless = ">=4.8"
av                   = ">=12.0"        # PyAV – robust codec support
# decord is already in the feature‑extraction group – if you need it for VLM,
# you can install that group as well.

# Additional utilities used by the scripts
pillow               = ">=10.0"
numpy                = ">=2.4,<3.0"
pandas               = "^2.3"
scikit-learn         = "^1.3"
tqdm                 = "^4.64"
[tool.poetry.group.clip_tracker]
optional = true

[tool.poetry.group.clip_tracker.dependencies]
torch                  = ">=2.0,<3.0"
torchvision            = ">=0.15,<1.0"
mmcv                   = "==2.0.1"
mmengine               = ">=0.8,<1.0"
mmdet                  = ">=3.0,<4.0"
mmpose                 = ">=1.0,<2.0"
filterpy               = ">=1.4,<2.0"
opencv-python-headless = "^4.8"
numpy                  = ">=1.26,<3.0"
tqdm                   = "^4.64"
[tool.poetry.group.tracking]
optional = true

[tool.poetry.group.tracking.dependencies]
torch                  = ">=2.0,<3.0"
torchvision            = ">=0.15,<1.0"
ultralytics            = ">=8.0,<9.0"
opencv-python-headless = "^4.8"
numpy                  = ">=1.26,<3.0"
deep-sort-realtime     = ">=1.3,<2.0"   
mediapipe              = ">=0.10,<1.0"   
# ── Dev dependencies ──────────────────────────────────────────────────────────
[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
codespell       = "^2.4"
pytest          = "^8.0"
pytest-xdist    = {version = "~=3.8.0", extras = ["psutil"]}
pytest-cov      = "~=7.0"
pytest-mock     = "^3.14"
mypy            = "~=1.18"
pre-commit      = "~=4.3"
ruff            = "~=0.14"
pandas          = "^2.3.3"
types-pyyaml    = "^6.0.12.20250915"
types-python-dateutil = "^2.9.0.20251008"
types-tqdm      = "^4.68"
types-requests  = "^2.33"

[tool.codespell]
skip = "*.csv,*.h5,*.lock,poetry.lock,*.txt"
ignore-words-list = "nd,ba,ann"

# ── Docs ──────────────────────────────────────────────────────────────────────
[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc = "~=16.0"


# ── Build backend ─────────────────────────────────────────────────────────────
[build-system]
requires      = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


# ── Tool config ───────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict         = true
ignore_missing_imports = true   # dlc2action ships no py.typed yet


[[tool.mypy.overrides]]
module = [
    "action_model_testing.*",
    "pytorch_lightning.*",
    "sklearn.*",
    "timm.*",
    "torchvision.*",
    "cv2.*",
    "h5py.*",
    "decord.*",
    "transformers.*",
]
ignore_missing_imports = true
ignore_errors          = true


[tool.pytest.ini_options]
testpaths    = ["src/tests"]
python_files = ["test_*.py"]
addopts      = "-ra -q -x --tb=short"

markers = [
    "unit: fast, no-IO tests",
    "integration: tests that write to disk or call subprocess",
]
 
 
[tool.coverage.run]
source  = ["src/sailsprep", "pipeline.py"]
omit    = ["tests/*"]